--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/drawing-4.sketchpad.png">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/drawing-4.sketchpad.png" />
+    <link rel="shortcut icon" href='%process.env.REACT_APP_API_URI%/drawing-4.sketchpad.png'>
+    <link rel="apple-touch-icon" href="%process.env.REACT_APP_API_URI%/drawing-4.sketchpad.png" />
     <!--manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%process.env.REACT_APP_API_URI%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
